# raytracing

./: .gitignore  CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  main.cpp  makefile  material.h  mesh.h  orbit.pov  readme.md  rtweekend.h  sphere.h  transform.h  triangle.h  vec3.h
povfiles/: orbit.pov  orbit.pov.bak  pov.ini  povscript.bat
